feat: implement authentication with NextAuth, add user registration and login functionality

--- a/.env
+++ b/.env
@@ -1,20 +1,13 @@
-# Docker-compose environment
 POSTGRES_USER=iroh
 POSTGRES_PASSWORD=iroh
 POSTGRES_DB=irohcdn
-POSTGRES_PORT=5432
-
-# API
-API_PORT=6666
+POSTGRES_PORT=4444
+API_PORT=3333
 IROH_REPO=/var/lib/iroh
 # Optionally set a bootstrap list for Iroh (comma-separated multi-addrs)
 IROH_BOOTSTRAP=
-
-# WEB
 WEB_PORT=5555
-API_BASE_URL=http://api:6666
-
-# CORS (for production)
-FRONTEND_URL=https://office.sabuytube.xyz
-ALLOWED_ORIGIN=https://office.sabuytube.xyz
-
+FRONTEND_URL=https://upload.sabuytube.xyz
+ALLOWED_ORIGIN=https://upload.sabuytube.xyz,http://localhost:5555,http://localhost:3333
+API_PUBLIC_URL=https://apiupload.sabuytube.xyz
+NEXT_PUBLIC_API_BASE_URL=https://apiupload.sabuytube.xyz
