--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,13 @@
+# Database connection (ใน Docker จะใช้ค่าจาก docker-compose)
 DATABASE_URL=postgresql://iroh:iroh@db:5432/irohcdn?schema=public
+
+# Iroh configuration
 IROH_REPO=/var/lib/iroh
 IROH_BIN=/usr/local/bin/iroh
 IROH_BOOTSTRAP=
+
+# API Port
 PORT=3333
+
+# CORS Configuration
 ALLOWED_ORIGIN=https://upload.sabuytube.xyz,http://localhost:5555
