--- a/web/.env
+++ b/web/.env
@@ -1,2 +1,6 @@
 NEXT_PUBLIC_API_BASE_URL=https://apiupload.sabuytube.xyz
 
+# NextAuth configuration
+NEXTAUTH_SECRET=your-super-secret-key-change-this-in-production-min-32-chars
+NEXTAUTH_URL=https://upload.sabuytube.xyz
+AUTH_TRUST_HOST=true
