--- a/api/package.json
+++ b/api/package.json
@@ -13,9 +13,14 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.1",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.20.0",
+    "bcrypt": "^6.0.0",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "prisma": "^5.20.0",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^5.0.0",
@@ -25,8 +30,10 @@
     "@nestjs/cli": "^10.4.2",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "typescript": "^5.6.3",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.7"
+    "@types/multer": "^1.4.7",
+    "@types/passport-jwt": "^4.0.1",
+    "typescript": "^5.6.3"
   }
 }
