--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-iroh}
       POSTGRES_DB: ${POSTGRES_DB:-irohcdn}
     ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+      - "${POSTGRES_PORT:-4444}:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
     healthcheck:
@@ -19,14 +19,18 @@ services:
     build:
       context: ./api
       dockerfile: Dockerfile
-    env_file:
-      - .env
-      - api/.env
+    environment:
+      - PORT=${API_PORT:-3333}
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-iroh}:${POSTGRES_PASSWORD:-iroh}@db:5432/${POSTGRES_DB:-irohcdn}?schema=public
+      - IROH_REPO=${IROH_REPO:-/var/lib/iroh}
+      - IROH_BIN=/usr/local/bin/iroh
+      - IROH_BOOTSTRAP=${IROH_BOOTSTRAP:-}
+      - ALLOWED_ORIGIN=${ALLOWED_ORIGIN:-*}
     depends_on:
       db:
         condition: service_healthy
     ports:
-      - "${API_PORT:-6666}:6666"
+      - "${API_PORT:-3333}:${API_PORT:-3333}"
     volumes:
       - iroh_repo:/var/lib/iroh
     restart: unless-stopped
@@ -35,13 +39,17 @@ services:
     build:
       context: ./web
       dockerfile: Dockerfile
-    env_file:
-      - .env
-      - web/.env
-    ports:
-      - "${WEB_PORT:-5555}:5555"
+      args:
+        NEXT_PUBLIC_API_BASE_URL: ${API_PUBLIC_URL:-http://localhost:3333}
+    environment:
+      - PORT=${WEB_PORT:-5555}
+      - NEXTAUTH_URL=${NEXTAUTH_URL:-http://localhost:5555}
+      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET:-please-change-this-secret-in-production}
+      - AUTH_TRUST_HOST=true
     depends_on:
       - api
+    ports:
+      - "${WEB_PORT:-5555}:${WEB_PORT:-5555}"
     restart: unless-stopped
 
 volumes:
