--- a/web/package.json
+++ b/web/package.json
@@ -8,10 +8,16 @@
     "start": "next start -p 5555"
   },
   "dependencies": {
+    "@auth/core": "^0.41.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
     "next": "15.0.3",
+    "next-auth": "^5.0.0-beta.30",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "24.10.0",
